# Simple_Catapult

./: .gitattributes  CMakeLists.txt  README.md
images/zombie/: uploads_files_2137887_zombie_fbx_rigged.fbx
images/zombie/animation/: Zombie Attack (2).fbx  Zombie Idle2.fbx  Zombie Running2.fbx
include/: Camera.h  Catapult.h  Model.h  PathUtils.h  Projectile.h  Skybox.h  Terrain.h  Zombie.h
shaders/: fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/: Camera.cpp  Catapult.cpp  Model.cpp  Projectile.cpp  Skybox.cpp  Terrain.cpp  Zombie.cpp  main.cpp  stb_image_impl.cpp
